[package]
name = "srcfiles"
version = "0.1.0"
authors = ["Mikhail Babenko <misha-babenko@yandex.ru>"]
edition = "2018"
repository = "https://github.com/jsgf/srcfiles"
documentation = "https://docs.rs/srcfiles"
description = "Extract source files for a Rust crate."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
